--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
     <title>Zomato Landing Page Clone </title>
   </head>
   <body>
-    
+    <section class="hero_section">
+      <header>
+        <nav class="navbar">
+          <a href="#">Get the app</a>
+          <div class="nav_menu_container">
+            <a href="#" class="link">Investor Relations</a>
+            <a href="#" class="link">Add restaurant</a>
+            <a href="#" class="link">Log in</a>
+            <a href="#" class="link">Sign up</a>
+            <i class="user_icon fa-solid fa-user"></i>
+          </div>
+        </nav>
+      </header>
+      <div>
+        <img src="./images/heroSectionLogo.png" alt="Zomato logo" class="hero_section_logo">
+        <h1>Discover the best food & drinks in Ahmedabad</h1>
+        <div>
+          <input type="text" class="input" placeholder="Ahmedabad">
+          <input type="text" class="input" placeholder="Search for restaurant, cuisine or a dish">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
