completed entire hero section

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <title>Zomato Landing Page Clone </title>
   </head>
   <body>
-    <section class="hero_section">
+    <section class="hero__section">
       <header>
         <nav class="navbar">
           <a href="#">Get the app</a>
-          <div class="nav_menu_container">
+          <div class="nav__menu_container">
             <a href="#" class="link">Investor Relations</a>
             <a href="#" class="link">Add restaurant</a>
             <a href="#" class="link">Log in</a>
@@ -46,12 +46,12 @@
           </div>
         </nav>
       </header>
-      <div>
-        <img src="./images/heroSectionLogo.png" alt="Zomato logo" class="hero_section_logo">
-        <h1>Discover the best food & drinks in Ahmedabad</h1>
-        <div>
-          <input type="text" class="input" placeholder="Ahmedabad">
-          <input type="text" class="input" placeholder="Search for restaurant, cuisine or a dish">
+      <div class="hero__section_container">
+        <img src="./images/heroSectionLogo.png" alt="Zomato logo" class="hero__section_logo">
+        <h1 class="hero__section_title">Discover the best food & drinks in Ahmedabad</h1>
+        <div class="hero__section_input_container">
+          <input type="text" class="input_container_location" placeholder="Ahmedabad">
+          <input type="text" class="input_container_search" placeholder="Search for restaurant, cuisine or a dish">
         </div>
       </div>
     </section>
