--- a/index.html
+++ b/index.html
@@ -55,5 +55,39 @@
         </div>
       </div>
     </section>
+
+    <section class="container we__offer">
+      <div class="we__offer_card">
+        <img src="./images/item1.png" alt="card 1 img"/>
+        <div class="we__offer_content">
+          <h2>Order Online</h2>
+          <p>Stay home and order to you doorstep</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="./images/item2.png" alt="card 2 img"/>
+        <div class="we__offer_content">
+          <h2>Dining</h2>
+          <p>View city's favorite dining venue</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="./images/item3.png" alt="card 3 img"/>
+        <div class="we__offer_content">
+          <h2>Nightlife and clubs</h2>
+          <p>Explore the city's top nightlife outlets</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="./images/item4.png" alt="card 4 img"/>
+        <div class="we__offer_content">
+          <h2>Order Online</h2>
+          <p>Stay home and order to you doorstep</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
