Added the collection and now applying the css in it

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <title>Zomato Landing Page Clone </title>
   </head>
   <body>
+    <!-- Hero section -->
     <section class="hero__section">
       <header>
         <nav class="navbar">
@@ -56,6 +57,7 @@
       </div>
     </section>
 
+    <!-- offer -->
     <section class="container we__offer">
       <div class="we__offer_card">
         <img src="./images/item1.png" alt="card 1 img"/>
@@ -87,6 +89,50 @@
           <h2>Order Online</h2>
           <p>Stay home and order to you doorstep</p>
         </div>
+      </div>
+    </section>
+
+    <!-- Collections -->
+    <section class="container collections">
+      <h1>Collection</h1>
+      <div class="sub__heading_container">
+          <span>Explore curated lists of top restaurants, cafes, pubs, and bars in Ahmedabad, based on trends</span>
+        <span>All collections in Ahmedabad</span>
+      </div>
+
+      <div class="collections_card_container">
+        <div class="card card1">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Newly Opened Restaurants</h4>
+            <span>6 Places</span>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>best in Ahmedabad</h4>
+            <span>21 Places</span>
+          </div>
+        </div>
+
+        <div class="card card3">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Best Buffets</h4>
+            <span>6 Places</span>
+          </div>
+        </div>
+
+        <div class="card card4">
+          <div class="overlay"></div>
+          <div class="content">
+            <h4>Places for Gujarati Thalis</h4>
+            <span>8 Places</span>
+          </div>
+        </div>
+
       </div>
     </section>
   </body>
