done till download the app and collection

--- a/index.html
+++ b/index.html
@@ -135,5 +135,39 @@
 
       </div>
     </section>
+
+    <!-- Get the app -->
+    <section class="container get__the_app">
+      <div class="semiContainer">
+        <div class="left">
+          <img src="./images/mobileBanner.png" alt="Mobile banner" />
+        </div>
+        <div class="right">
+          <h1>Get the Zomato app</h1>
+          <p>We will send you a link, open it on your phone to download the app</p>
+          <div class="radio__botton_container">
+            <div>
+              <input type="radio" id="email" name="download_app" />
+              <label for="email" style="font-size: 14px;">Email</label>
+            </div>
+            <div>
+              <input type="radio" id="phone" name="download_app" />
+              <label for="phone" style="font-size: 14px;">Phone</label>
+            </div>
+          </div>
+          <div class="input_container">
+            <input type="text" placeholder="Email" />
+            <button>Share app Link</button>
+          </div>
+          <div class="downlod__app_container">
+            <h5>download app from</h5>
+            <div>
+              <img src="./images/appleStore.png" alt="Apple store">
+              <img src="./images/playStore.png" alt="Play store">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
