Explore option section

--- a/index.html
+++ b/index.html
@@ -169,5 +169,24 @@
         </div>
       </div>
     </section>
+
+    <!-- Explore options near me Section -->
+    <section class="container explore__options">
+      <h2>Explore options near me</h2>
+      <div class="explore__options_select">
+        <select name="explore" id="" class="explore">
+          <option value="">Popular cuisines near me</option>
+        </select>
+        <select name="explore" id="" class="explore">
+          <option value="">Popular restaurant types near me</option>
+        </select>
+        <select name="explore" id="" class="explore">
+          <option value="">Top Restaurant Chains</option>
+        </select>
+        <select name="explore" id="" class="explore">
+          <option value="">Cities We Deliver To</option>
+        </select>
+      </div>
+    </section>
   </body>
 </html>
