--- a/index.html
+++ b/index.html
@@ -188,5 +188,66 @@
         </select>
       </div>
     </section>
+
+    <!-- footer -->
+    <footer class="container footer">
+      <div class="footer_section1">
+        <img src="./images/logo.png" alt="Zomato_logo">
+        <div class="section1__buttonContainer">
+          <button>
+            <img src="https://flagcdn.com/w40/in.png" alt="indian_flag" style="width: 15px;"/>
+            India
+          </button>
+          <button><i class="fa fa-globe"></i>English</button>
+        </div>
+      </div>
+
+      <div class="navigation_container">
+        <div class="link__container">
+          <h5>ABOUT ZOMATO</h5>
+          <a class="footer__link" href="#">Who We Are</a>
+          <a class="footer__link" href="#">Blog</a>
+          <a class="footer__link" href="#">Work With Us</a>
+          <a class="footer__link" href="#">Investor Relations</a>
+          <a class="footer__link" href="#">Report Fraud</a>
+          <a class="footer__link" href="#">Press Kit</a>
+          <a class="footer__link" href="#">Contact Us</a>
+        </div>
+        <div class="link__container">
+          <h5>ZOMAVERSE</h5>
+          <a class="footer__link" href="#">Zomato</a>
+          <a class="footer__link" href="#">Blinkit</a>
+          <a class="footer__link" href="#">Feedign india</a>
+          <a class="footer__link" href="#">Hyperpure</a>
+          <a class="footer__link" href="#">Zomaland</a>
+        </div>
+        <div class="link__container">
+          <h5>FOR RESTAURANTS</h5>
+          <a class="footer__link" href="#">Partner With Us</a>
+          <a class="footer__link" href="#">App For You</a>
+        </div>
+        <div class="link__container">
+          <h5>LEARN MORE</h5>
+          <a class="footer__link" href="#">Privacy</a>
+          <a class="footer__link" href="#">Security</a>
+          <a class="footer__link" href="#">Terms</a>
+          <a class="footer__link" href="#">Sitemap</a>
+        </div>
+        <div class="link__container">
+          <h5>SOCIAL LINKS</h5>
+          <div class="section__links_container">
+            <button><i class="fa-brands fa-linkedin-in"></i></button>
+            <button><i class="fa-brands fa-instagram"></i></button>
+            <button><i class="fa-brands fa-twitter"></i></button>
+            <button><i class="fa-brands fa-youtube"></i></button>
+            <button><i class="fa-brands fa-facebook-f"></i></button>
+          </div>
+          <br/>
+          <img src="./images/appleStore.png" alt="appleStore" class="footer__section_logo">
+          <img src="./images/playStore.png" alt="playStore" class="footer__section_logo">
+        </div>
+      </div>
+
+    </footer>
   </body>
 </html>
