completed the zomato clone

--- a/index.html
+++ b/index.html
@@ -247,7 +247,11 @@
           <img src="./images/playStore.png" alt="playStore" class="footer__section_logo">
         </div>
       </div>
-
+      <div class="disclaimer">
+        By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and 
+        Content Policies. All trademarks are properties of their respective owners. 2008-2024 © Zomato™ Ltd. 
+        All rights reserved.
+      </div>
     </footer>
   </body>
 </html>
